<resources>
    <string name="app_name">K224111488DoKhanhLinh</string>
    <string name="title_login_username">Username:</string>
    <string name="title_login_username_hint">Enter your name</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save_infor">Save login infor</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_confirm_exit_title">Confirm Exit</string>
    <string name="title_confirm_exit_message">Are you sure you want to Exit?</string>
    <string name="title_confirm_exit_ok">OK</string>
    <string name="title_confirm_exit_cancel">Cancel</string>
    <string name="title_product_id">Product ID:</string>
    <string name="title_product_code">Product Code:</string>
    <string name="title_product_name">Product Name:</string>
    <string name="title_product_price">Product Price:</string>
    <string name="title_add">Add</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="menu_add_new_product">Add Product</string>
    <string name="menu_about">About</string>
    <string name="title_product_imageid">Image ID:</string>
</resources>