<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FDF6FD"
    tools:context=".LoginActivity">

    <!-- Wrapper layout để tạo margin 2 bên -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="188dp"
            app:srcCompat="@mipmap/ic_logo_login" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_login_username"
            android:textColor="#2196F3"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title_login_username_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_login_password"
            android:textColor="#2196F3"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/chkSaveLoginInfor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_login_save_infor"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#2196F3"
                android:onClick="do_login"
                android:text="@string/title_login_button_login"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/btnExit"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="do_exit"
                android:background="@drawable/button_background"
                android:padding="0dp"
                app:srcCompat="@mipmap/ic_exit"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
